# PuningAnalysis

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: matrix_motif.json
data/ensemble_trees/: 10_primates_EPO_default.nh  24_primates_EPO-Extended_default.nh  39_fish_EPO_default.nh  91_eutherian_mammals_EPO-Extended_default.nh  default_ncRNA-trees_full_species_tree.nh  default_protein-trees_default.nh  murinae_ncRNA-trees_default.nh  pig_breeds_ncRNA-trees_default.nh
honours/nbks/: exp_num_sub.ipynb
math/: evolutionary_rate.py
nbks/: 16s_matrices.ipynb  DSA4199_DNA_Simulation.ipynb  evolution_rate_tests.ipynb  exp_num_sub.ipynb  flowchart.ipynb  get_ensemble_trees.ipynb  working.ipynb
nbks/alignment_prob/: alignment_dotplot_test_mafft.ipynb  filtering_alignment.ipynb  mafft_align.ipynb  not_completeds.tsv
remote_src/: nuc_count_analysis.ipynb
results/: WTS_Q(3).json  WTS_pi(1).json  WTS_pi(2).json  WTS_pi(3).json  WTS_repeat(1).json  WTS_repeat(2).json  WTS_repeat(3).json  anova_result.json  evolution_time_test.json  label_counts.json  label_counts2.json  length_1000.json  length_4000.json  nuc_counts.json  nuc_counts_output.txt
results/output_data/: Q_test.json  (+22 more)
src/: clock_violation_bootstrapping2.py
tests/: test_WTS_class.py  test_WTS_iid_cogent3.py  test_clock_bootstrap.py  test_get_model_fitting_tree.py  test_sequence_alignment_filtering.py  test_triads_selection_jsd.py  test_triaid_selection.py  test_triaid_selection_2.py  test_triple_selection.py  test_triples_aln_representative_subset_selection.py  test_triples_model_fitting.py  test_wts.py
(+1872 files in other folders)
