[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "clock_project"
authors = [{name = "puning", email = "wangpuning28@gmail.com"}]
dependencies = ["click", "mpi4py"]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/GavinHuttley/PuningAnalysis.git"
