[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "clock_project"
authors = [{name = "Puning Wang", email = "wangpuning28@gmail.com"}]
dependencies = ["click", 
                "cogent3", 
                "pytest", 
                "pytest-cov", 
                "pandas",
                "plotly",
                "scipy",
                "statsmodels",
                "numpy"]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/GavinHuttley/PuningAnalysis.git"

[project.scripts]
cviol_bst = "clock_project.genome_analysis.bootstrapping.clock_violation_bootstrapping:main"
sviol_bst = "clock_project.genome_analysis.bootstrapping.non_stationarity_bootstrapping:main"



